<resources>
    <string name="app_name">Bet On It</string>
    <string name="user_DOB_hint">Date Of Birth</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signup">Sign Up</string>
    <string name="tvSignup">Already have an account?</string>
    <string name="Login">Login</string>
    <string name="tvLogin">New here?</string>
    <string name="challenge_request">has challenged you</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="username">Username</string>
    <string name="addr">Address</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Jd9Mbe2J6LaTOfwhH4N7vV1fbcn5ML3ImH65Me4W</string>
    <string name="back4app_client_key">CqbgDG6Mc9BOIzsGzFltxxR1nAlSDlk2wzPMVSK5</string>
    <string name="confirmHint">Confirm Password</string>
    <string name="imgLogo">Bet On It Logo</string>
    <string name="search">Search</string>
    <string name="createWager">Create a Wager</string>
    <string name="disChallenge">Display Challenges</string>
    <string name="findChallenger">Find Opponents</string>
    <string name="chlHistory">Betting History</string>
    <string name="arb">Arbitration</string>
    <string name="bet">Betting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="editBtn">Edit Button</string>
    <string name="imgUserIcon">Image of User Icon</string>
    <string name="faveBet">Favorite Bets</string>
    <string name="fullName">Full Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save Changes</string>
    <string name="editprof">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string> <!-- what is this for?? -->
    <string name="createwager">Create A Wager</string>
    <string name="bet_amount">Amount</string>
    <string name="bet_type">Type</string>
    <string name="start_date">Start date</string>
    <string name="pick_date">Pick Date</string>
    <string name="start_time">Start time</string>
    <string name="pick_time">Pick Time</string>
    <string name="resc_date">Rescind date</string>
    <string name="resc_time">Rescind time</string>
    <string name="desc">Description</string>
    <string name="confirm">Confirm</string>
    <string name="betName">Name of Bet</string>
    <string name="betInfo">Bet Information</string>
    <string name="challenger_name">Challenger:</string>
    <string name="bi_betname">Bet Name:</string>
    <string name="bi_amount">Amount:</string>
    <string name="bi_type">Type:</string>
    <string name="bi_start">Start Date:</string>
    <string name="bi_resc">Rescind Date:</string>
    <string name="bi_desc">Description:</string>
    <string name="slogan">Put Your Money Where Your Mouth Is</string>
    <string name="rated_cases_fragment">Rated Cases Fragment</string>
    <string name="pending_cases_fragment">Pending Cases Fragment</string>
    <string name="my_cases_fragment">My Cases Fragment</string>
    <string name="status">Status</string>
    <string name="info">Info</string>
    <string name="message">Message</string>
    <string name="showMessages">Show Messages</string>
</resources>
