<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/betting"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_prof"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_wager"
            android:icon="@drawable/ic_bet"
            android:title="@string/createWager" />

        <item
            android:id="@+id/nav_challenge"
            android:icon="@drawable/ic_wage"
            android:title="@string/disChallenge" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_search"
            android:title="@string/findChallenger" />

        <item
            android:id="@+id/nav_hist"
            android:icon="@drawable/ic_history"
            android:title="@string/chlHistory" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_envelope"
            android:title="Inbox" />
    </group>

    <item android:title="@string/arb">
        <menu>
            <item
                android:id="@+id/nav_acceptcase"
                android:icon="@drawable/ic_edit"
                android:title="Accept A Case" />

            <item
                android:id="@+id/nav_showcases"
                android:icon="@drawable/ic_cases"
                android:title="Display Cases" />

            <item
                android:icon="@drawable/ic_arb"
                android:id="@+id/nav_ratecases"
                android:title="Rate Completed Cases" />
        </menu>
    </item>


</menu>