<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="259dp"
        android:layout_height="249dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@mipmap/logo_foreground"
        tools:srcCompat="@mipmap/logo_foreground"
        android:contentDescription="@string/imgLogo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/design_default_color_surface"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/design_default_color_on_primary"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passCon"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/design_default_color_on_primary"
        android:ems="10"
        android:hint="@string/confirmHint"
        android:inputType="textPassword"
        android:autofillHints=""
        android:layout_marginStart="60dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passCon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/user_DOB"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/design_default_color_surface"
        android:ems="10"
        android:hint="@string/user_DOB_hint"
        android:inputType="date"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_DOB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorSecondary"
        android:fontFamily="@font/roboto"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/tvNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignUp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tvSignup"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginStart="79dp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignUp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="79dp"
        android:layout_toEndOf="@+id/tvNew"
        android:text="@string/Login"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="79dp"
        android:layout_toRightOf="@+id/tvNew"
        android:gravity="start" />

</RelativeLayout>