<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        tools:text="@string/status" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary" />
</TableRow>