<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="259dp"
        android:layout_height="249dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@mipmap/logo_foreground"
        tools:srcCompat="@mipmap/logo_foreground" />

    <EditText
        android:id="@+id/username"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/design_default_color_surface"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/design_default_color_on_primary"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/colorSecondary"
        android:fontFamily="@font/roboto"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tvLogin"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="79dp"
        android:layout_toEndOf="@+id/tvSignup"
        android:text="@string/signup"
        android:textAlignment="textStart"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold" />

</RelativeLayout>