<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreyWhite"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBetName"
                android:layout_width="30dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="68dp"
                android:layout_toStartOf="@+id/etBetName"
                android:adjustViewBounds="true"
                android:background="@color/design_default_color_background"
                android:contentDescription="@string/betName"
                android:padding="5dp"
                android:src="@drawable/ic_write" />

            <EditText
                android:id="@+id/etBetName"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="68dp"
                android:background="@color/design_default_color_surface"
                android:ems="10"
                android:hint="@string/betName"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <ImageView
                android:id="@+id/ivUsername"
                android:layout_width="30dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivBetName"
                android:layout_marginStart="68dp"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@+id/etUsername"
                android:adjustViewBounds="true"
                android:background="@color/design_default_color_background"
                android:contentDescription="@string/username"
                android:padding="5dp"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/etBetName"
                android:layout_marginEnd="68dp"
                android:layout_marginTop="15dp"

                android:background="@color/design_default_color_surface"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <ImageView
                android:id="@+id/ivAmount"
                android:layout_width="30dp"
                android:layout_height="34dp"
                android:layout_below="@+id/ivUsername"
                android:layout_alignParentStart="true"
                android:layout_marginStart="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/etAmount"
                android:background="@color/design_default_color_background"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_money_bill_alt" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUsername"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="68dp"
                android:background="@color/design_default_color_surface"
                android:ems="10"
                android:hint="@string/bet_amount"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <ImageView
                android:id="@+id/ivType"
                android:layout_width="30dp"
                android:layout_height="34dp"
                android:layout_below="@+id/ivAmount"
                android:layout_alignParentStart="true"
                android:layout_marginStart="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/etType"
                android:background="@color/design_default_color_background"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_question_circle" />

            <EditText
                android:id="@+id/etType"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAmount"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="68dp"
                android:background="@color/design_default_color_surface"
                android:ems="10"
                android:hint="@string/bet_type"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <ImageView
                android:id="@+id/ivStartDate"
                android:layout_width="30dp"
                android:layout_height="34dp"
                android:layout_below="@+id/ivType"
                android:layout_alignParentStart="true"
                android:layout_marginStart="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/etStartDate"
                android:background="@color/design_default_color_background"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_calendar"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/etStartDate"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etType"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="68dp"
                android:background="@color/design_default_color_surface"
                android:ems="10"
                android:hint="@string/start_date"
                android:inputType="date"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <ImageView
                android:id="@+id/ivRescDate"
                android:layout_width="30dp"
                android:layout_height="34dp"
                android:layout_below="@+id/ivStartDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/etRescDate"
                android:background="@color/design_default_color_background"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_calendar_times" />

            <EditText
                android:id="@+id/etRescDate"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etStartDate"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="68dp"
                android:background="@color/design_default_color_surface"
                android:ems="10"
                android:hint="@string/resc_date"
                android:inputType="date"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <ImageView
                android:id="@+id/ivDesc"
                android:layout_width="26dp"
                android:layout_height="140dp"
                android:layout_below="@+id/ivRescDate"
                android:layout_alignParentStart="true"
                android:layout_marginStart="68dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/etDesc"
                android:background="@color/design_default_color_background"
                android:padding="5dp"
                android:src="@drawable/ic_edit" />

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="239dp"
                android:layout_height="140dp"
                android:layout_below="@+id/etRescDate"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="68dp"
                android:background="@color/design_default_color_background"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/desc"
                android:inputType="textMultiLine"
                android:padding="5dp" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etDesc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/sec_color_gradient"
                android:fontFamily="@font/roboto"
                android:text="@string/confirm" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>